--- a/css/style.css
+++ b/css/style.css
@@ -9,57 +9,79 @@
 }
 
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
+  list-style: 0;
   box-sizing: border-box;
-  list-style: none;
-  border: none;
   font-family: "Roboto", sans-serif;
 }
+
 body {
   background-color: var(--bg-login-main);
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-}
-
 .container {
   width: 100%;
+  max-width: 124.6rem;
   padding: 0 15px;
   margin: 0 auto;
 }
 
-.figure {
+.contain {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-top: 2.75rem;
-  margin-bottom: 44px;
+  gap: 0.625rem;
+  justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.contain__login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  margin-top: 60px;
 }
 
 .figure__image {
-  width: 110px;
-  height: 110px;
-}
-
-.figure__title {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 1.25rem;
-  line-height: 1.4375rem;
-
-  color: #000000;
-}
-
-img {
-  max-width: 110px;
+  width: 6.875rem;
+  height: 6.875rem;
 }
 
 .login {
+  border-radius: 30px 30px 0 0;
   background-color: var(--bg-login-light);
-  border: solid 1px #fff;
-  border-radius: 40px;
+  height: 100vh;
+  padding-top: 40px;
+}
+.login__title {
+  text-transform: uppercase;
+  font-size: 1.75rem;
+}
+
+a {
+  display: inline-block;
+}
+
+.login__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-size: 1.5rem;
+  color: #ffffff;
+  background-color: var(--bg-login-main);
+  padding: 2px;
+}
+
+.login__icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  background-color: #ffffff;
+  padding: 2px;
 }
