--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .figure__image {
@@ -55,7 +55,20 @@ body {
   border-radius: 30px 30px 0 0;
   background-color: var(--bg-login-light);
   height: 100vh;
-  padding-top: 40px;
+  padding-top: 30px;
+}
+
+.login__header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 30px;
+  margin-bottom: 15px;
+}
+
+.login__logo {
+  width: 150px;
 }
 .login__title {
   text-transform: uppercase;
