--- a/css/global.css
+++ b/css/global.css
@@ -9,10 +9,6 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  list-style: 0;
-  box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
 
@@ -20,81 +16,10 @@ body {
   background-color: var(--bg-login-main);
 }
 
-.container {
-  width: 100%;
-  max-width: 124.6rem;
-  padding: 0 15px;
-  margin: 0 auto;
+.container-fluid {
+  padding: 0;
 }
 
-.contain {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.625rem;
-  justify-content: center;
-  margin-top: 60px;
-  margin-bottom: 80px;
-}
-
-.contain__login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1.5rem;
-  margin-top: 40px;
-}
-
-.figure__image {
-  width: 6.875rem;
-  height: 6.875rem;
-}
-
-.login {
-  border-radius: 30px 30px 0 0;
-  background-color: var(--bg-login-light);
-  height: 100vh;
-  padding-top: 30px;
-}
-
-.login__header {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 30px;
-  margin-bottom: 15px;
-}
-
-.login__logo {
-  width: 150px;
-}
-.login__title {
-  text-transform: uppercase;
-  font-size: 1.75rem;
-}
-
-a {
-  display: inline-block;
-}
-
-.login__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-family: "Inter", sans-serif;
-  font-size: 1.5rem;
-  color: #ffffff;
-  background-color: var(--bg-login-main);
-  padding: 2px;
-}
-
-.login__icon {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-  background-color: #ffffff;
-  padding: 2px;
+.col-reset {
+  padding: 0;
 }
