--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
 :root {
   --bg-login-main: #3aaaff;
   --bg-login-light: #90e5ff;
+  --bg-body-loged: #E7EFF6;
   --bg-feed-description: rgba(183, 181, 190, 0.7);
   --bg-button-grey: #6497b1;
   --text-title-white: #ffffff;
@@ -12,9 +13,34 @@
   font-family: "Roboto", sans-serif;
 }
 
-body {
-  background-color: var(--bg-login-main);
+/* Estilo do menu */
+
+.menu {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 10;
 }
+
+.menu img {
+  height: 25px;
+}
+
+.menu__content {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-border {
+  border-radius: 50%;
+  padding: 8px;
+  background: rgba(231, 239, 246, 0.6);
+  margin: 0 12px
+}
+
 
 .container-fluid {
   padding: 0;
