--- a/css/modal-post.css
+++ b/css/modal-post.css
@@ -1,36 +1,53 @@
 body {
-  background-color: #010101 !important;
+  overflow: hidden;
 }
 
 .modal-post {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-}
-
-.title {
-  display: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  top: 0;
+  overflow: hidden;
 }
 
 .modal__content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   margin-top: -100px;
-  width: 100%;
-  height: max-content;
+  width: 95%;
+  padding: 20px;
+  min-height: 600px;
   background-color: #f1f1f1;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  gap: 20px;
   border-radius: 20px;
+  margin: 5px;
+
+}
+
+.closed {
+  position: absolute;
+  right: 30px;
+  cursor: pointer;
+}
+.closed img {
+  width: 20px;
+  height: 20px;
+}
+
+.title {
+  display: flex;
 }
 
 .header__profile {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: flex-start;
-  gap: 40px;
-  padding: 20px 0;
   margin-bottom: 5px;
 }
 
@@ -62,34 +79,59 @@ body {
   color: #000000;
 }
 
-.image__upload {
+.box__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 150px;
-  border-top: 20px solid #fff;
-  border-left: 10px solid #fff;
-  border-right: 10px solid #fff;
-  border-bottom: 10px solid #fff;
+  height: 300px;
   border-radius: 7px 7px 0 0;
+}
+
+.image__upload {
+  border: 10px solid #fff;
+  width: 70%;
+  height: 100%;
+  
 }
 
 .content__post {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   gap: 10px;
   background: #ffffff;
-  border-radius: 0 0 7px 7px;
-  border-top: none;
-  border-left: 10px solid #fff;
-  border-right: 10px solid #fff;
-  border-bottom: 20px solid #fff;
+  border-radius: 7px;
   padding: 10px 0;
   margin-bottom: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 10px 10px 0 10px;
+
+}
+
+.content__post span {
+  display: block;
+  width: 100%;
+  color: #acacac;
+}
+
+.form_post {
+  display: flex;
+  justify-content: center;
+}
+
+.form_post form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  margin: 2px;
 }
 
 textarea {
   width: 100%;
+  display: block;
   border: none;
   resize: none !important;
 }
@@ -98,13 +140,18 @@ textarea:focus {
   outline: none;
 }
 
+textarea::after {
+  background-image: url('../assets/icon/icon-post.svg');
+  background-color: #cccccc;
+}
+
 .btn-post {
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
   background: #6497b1;
-  border-radius: 10px;
+  border-radius: 30px;
   padding: 15px 0;
   width: 200px;
   margin: 0 auto;
@@ -117,9 +164,28 @@ textarea:focus {
   color: #fff;
 }
 
+.count__comment img {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 576px) {
+  .modal__content {
+    width: 80%;
+  }
+
+  .closed {
+    right: 10px;
+    top: 0px;
+  }
+
+}
+
 @media screen and (min-width: 768px) {
   .modal__content {
-    margin-top: 200px;
+    width: 50%;
+
   }
   .title {
     display: flex;
@@ -127,23 +193,13 @@ textarea:focus {
     text-align: center;
     border-bottom: 1px solid #acacac;
     padding-top: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     position: relative;
   }
 
   .title__name {
     margin-bottom: 0;
-  }
-
-  .closed {
-    align-self: flex-end !important;
-    margin-right: 0;
-    position: absolute;
-    right: 20px;
-  }
-  .closed img {
-    width: 40px;
-    height: 40px;
+    font-size: 1.6rem;
   }
 
   .header__profile {
@@ -152,6 +208,15 @@ textarea:focus {
   }
 
   .image__upload {
+    width: 50%;
     height: 250px;
+  }
+
+  /* .box__image {
+    width: 70$;
+  } */
+
+  .btn-post {
+    width: 300px;
   }
 }
