--- a/css/profile.css
+++ b/css/profile.css
@@ -2,34 +2,69 @@ body {
   background: var(--bg-body-loged);
 }
 
-.main__images {
-  z-index: 0;
+.profile {
+  width: 100%;
+  height: 150px;
+
+}
+
+.profile__img {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+}
+
+.profile__img img {
+  height: 60%;
+  border-radius: 50%;
+}
+
+.profile__paragraph span {
+  font-weight: 500;
+  line-height: 1.5rem;
+
+}
+
+.content {
+  width: 100%;
+}
+
+.row {
+  margin: 0;
+}
+
+.col {
+  flex: auto;
+}
+
+.image__post {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .image__post img {
   width: 100%;
-  height: 95vh;
+  height: 45vh;
+  position: relative;
+  object-fit: cover;
+
+
 }
 
-.image__post {
-  display: flex;
-  align-items: center;
-}
-
-.image__post .card__description {
+.card__description {
   position: absolute;
-  width: 100%;
-  margin-top: 10%;
-}
-
-.image__post
-.card__description
-.card__description__profile {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
   background: rgba(183, 181, 190, 0.7);
   border-radius: 40px;
   padding: 10px;
-  max-width: 410px;
-  min-height: 250px;
+  width: 90%;
+
 }
 
 .card__description h2 {
@@ -39,29 +74,104 @@ body {
   justify-content: center;
 }
 
-.card__description, p {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  color: #ffffff;
+.card__description p,
+.created__at span {
+  font-size: 12px;
 }
 
 @media screen and (min-width: 576px) {
-  .image__post .card__description {
-    width: 85%;
-    margin-left: 60px;
-    margin-right: 60px;
+  .profile {
+    margin: 0 60px 0 60px;
+    padding-left: 10px;
+    height: 190px;
+  }
+
+  .profile__paragraph span {
+    font-size: 1.3rem;
+  }
+
+  .profile__img {
+    justify-content: initial;
+    gap: 30px;
+    height: 115px;
+    margin-top: 25px;
+  }
+
+  .image__post {
+    justify-content: center;
+  }
+
+  .col {
+    flex: auto;
+  }
+
+  .image__post img {
+    width: 100%;
+    object-fit: cover;
+
   }
 
   .card__description {
-    align-items: flex-start;
+    width: 90%;
+    color: #fff;
+    background: rgba(183, 181, 190, 0.7);
+    border-radius: 40px;
+    padding: 10px;
+    bottom: 10px;
+  }
+
+  .card__description p {
+    font-size: 14px;
+  }
+
+  .created__at span {
+    font-size: 14px;
+  }
+
+}
+
+@media screen and (min-width: 992px) {
+  .profile__img small {
+    font-size: 16px;
+  }
+
+  .profile__paragraph span {
+    font-size: 1.5rem;
+  }
+
+  .content {
+    margin: 0 50px 0 50px;
+    padding: 0 25px 0 25px;
+  }
+
+  .card__description p,
+  .created__at span {
+    font-size: 16px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .image__post .card__description {
-    width: 80%;
+  .profile {
+    margin: 0 120px 0 120px;
+    padding: 0 50px 0 50px;
   }
+
+  .profile__paragraph span {
+    font-size: 1.7rem;
+  }
+
+  .profile__img small {
+    font-size: 18px;
+  }
+
+  .content {
+    margin: 0 100px 0 100px;
+    padding: 0 40px 0 40px;
+  }
+
+  .card__description p,
+  .created__at span {
+    font-size: 18px;
+  }
+
 }
