--- a/css/modal-post.css
+++ b/css/modal-post.css
@@ -1,4 +1,4 @@
-body {
+html {
   overflow: hidden;
 }
 
@@ -7,26 +7,29 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 100;
+  transition: .5s;
   top: 0;
+  right: -100%;
   overflow: hidden;
+  transform: translateX(-100%);
 }
 
 .modal__content {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-top: -100px;
   width: 95%;
   padding: 20px;
   min-height: 600px;
   background-color: #f1f1f1;
   border-radius: 20px;
-  margin: 5px;
+  margin: 20px;
+  transition: .3s;
+  transform: scale(1) translateX(0%);
 
 }
 
@@ -35,6 +38,7 @@ body {
   right: 30px;
   cursor: pointer;
 }
+
 .closed img {
   width: 20px;
   height: 20px;
@@ -92,7 +96,7 @@ body {
   border: 10px solid #fff;
   width: 70%;
   height: 100%;
-  
+
 }
 
 .content__post {
@@ -111,8 +115,8 @@ body {
 
 }
 
-.content__post span {
-  display: block;
+.content__post,
+.counter {
   width: 100%;
   color: #acacac;
 }
@@ -133,16 +137,12 @@ textarea {
   width: 100%;
   display: block;
   border: none;
-  resize: none !important;
+  resize: none;
+  font-size: 18px;
 }
 
 textarea:focus {
   outline: none;
-}
-
-textarea::after {
-  background-image: url('../assets/icon/icon-post.svg');
-  background-color: #cccccc;
 }
 
 .btn-post {
@@ -176,8 +176,8 @@ textarea::after {
   }
 
   .closed {
-    right: 10px;
-    top: 0px;
+    right: 20px;
+    top: 12px;
   }
 
 }
@@ -185,8 +185,13 @@ textarea::after {
 @media screen and (min-width: 768px) {
   .modal__content {
     width: 50%;
-
   }
+
+  .closed {
+    right: 20px;
+    top: 5px;
+  }
+
   .title {
     display: flex;
     justify-content: center;
@@ -211,10 +216,6 @@ textarea::after {
     width: 50%;
     height: 250px;
   }
-
-  /* .box__image {
-    width: 70$;
-  } */
 
   .btn-post {
     width: 300px;
