--- a/css/profile.css
+++ b/css/profile.css
@@ -77,6 +77,8 @@ body {
 .card__description p,
 .created__at span {
   font-size: 12px;
+  color: #383737;
+  font-weight: 500;
 }
 
 @media screen and (min-width: 576px) {
@@ -167,11 +169,6 @@ body {
   .content {
     margin: 0 100px 0 100px;
     padding: 0 40px 0 40px;
-  }
-
-  .card__description p,
-  .created__at span {
-    font-size: 18px;
   }
 
 }
